# web_cheacker_mainditect

./: .gitignore  cheack.bat  cheacker_tool.html  content_processor.py  create_shortcut.py  dom_treeSt.py  get_tree.py  high_precision_search_system.py  make_tree.py  playwright_mainditect_v2.py  playwright_mainditect_v3.py  pyproject.toml  readme.md  requirements.in  requirements.txt  requirements_search.in  scorer.py  search_and_validate.py  setup_logger.py  util_str.py  web-cheackerV3.py  web_type_chk.py
content_extractor/: __init__.py  config.py  core.py  dom_treeSt.py  dom_utils.py  make_tree.py  playwright_helpers.py  quality_evaluator.py  relevance_scorer.py  scorer.py  web_type_chk.py
content_extractor/config/: no_results_config.json  quality_config.json
doc/: pagination_improvement_proposal.md
doc/setup/: README.md
doc/test/: test_design_content_extractor.md
mail/: __init__.py  my_gmail_account.py  test_send_mail.py
review/: content_extractor_review.md
review/2026-01-14/: config.py_review.md  core.py_review.md  dom_treeSt.py_review.md  dom_utils.py_review.md  make_tree.py_review.md  playwright_helpers.py_review.md  quality_evaluator.py_review.md  (+3 more)
test/: run_test_gui.py  test_cases..json  test_choice_content.py  test_config.py  test_core.py  test_dom_utils.py  test_file_handler.py  test_make_tree.py  test_playwright_helpers.py  test_quality_evaluator.py  test_relevance_scorer.py  test_scorer.py  test_util_str.py  test_web_type_chk.py
text_struct/: text_struct.py
users/: config.yaml
utils/: __init__.py  file_handler.py  playwright_utils.py
(+3 files in other folders)
